// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[LoginBtns:login] rendering test should render without crashing 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
          },
        ]
      }
    >
      <TouchableOpacity
        activeOpacity={0.2}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#333333",
              "borderRadius": 3,
              "borderStyle": "solid",
              "borderWidth": 1,
              "height": 40,
              "justifyContent": "center",
              "width": "100%",
            },
            Object {
              "backgroundColor": "#62e384",
              "borderColor": "black",
              "borderStyle": "solid",
              "borderWidth": 0,
              "fontSize": 14,
              "fontWeight": "bold",
              "lineHeight": 16,
              "marginBottom": 10,
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 10,
              "textAlign": "center",
              "width": "62%",
            },
          ]
        }
        testID="btn-local-sign-in"
      >
        <Text
          style={
            Object {
              "color": "#FFF",
            }
          }
        >
          Email
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.2}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#333333",
              "borderRadius": 3,
              "borderStyle": "solid",
              "borderWidth": 1,
              "height": 40,
              "justifyContent": "center",
              "width": "100%",
            },
            Object {
              "backgroundColor": "#fff",
              "borderColor": "black",
              "borderStyle": "solid",
              "borderWidth": 0,
              "fontSize": 14,
              "fontWeight": "bold",
              "lineHeight": 16,
              "marginBottom": 10,
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 10,
              "textAlign": "center",
              "width": "62%",
            },
          ]
        }
        testID="btn-google-sign-in"
      >
        <Text>
          <Text
            style={
              Object {
                "color": "#4285F4",
              }
            }
          >
            G
          </Text>
          <Text
            style={
              Object {
                "color": "#EA4335",
              }
            }
          >
            o
          </Text>
          <Text
            style={
              Object {
                "color": "#FBBC05",
              }
            }
          >
            o
          </Text>
          <Text
            style={
              Object {
                "color": "#4285F4",
              }
            }
          >
            g
          </Text>
          <Text
            style={
              Object {
                "color": "#34A853",
              }
            }
          >
            l
          </Text>
          <Text
            style={
              Object {
                "color": "#EA4335",
              }
            }
          >
            e
          </Text>
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.2}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#333333",
              "borderRadius": 3,
              "borderStyle": "solid",
              "borderWidth": 1,
              "height": 40,
              "justifyContent": "center",
              "width": "100%",
            },
            Object {
              "backgroundColor": "#3b5998",
              "borderColor": "black",
              "borderStyle": "solid",
              "borderWidth": 0,
              "fontSize": 14,
              "fontWeight": "bold",
              "lineHeight": 16,
              "marginBottom": 10,
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 10,
              "textAlign": "center",
              "width": "62%",
            },
          ]
        }
        testID="btn-facebook-sign-in"
      >
        <Text
          style={
            Object {
              "color": "#FFF",
            }
          }
        >
          facebook
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.2}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#333333",
              "borderRadius": 3,
              "borderStyle": "solid",
              "borderWidth": 1,
              "height": 40,
              "justifyContent": "center",
              "width": "100%",
            },
            Object {
              "backgroundColor": "#ffe812",
              "borderColor": "black",
              "borderStyle": "solid",
              "borderWidth": 0,
              "fontSize": 14,
              "fontWeight": "bold",
              "lineHeight": 16,
              "marginBottom": 10,
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 10,
              "textAlign": "center",
              "width": "62%",
            },
          ]
        }
        testID="btn-kakao-sign-in"
      >
        <Text
          style={
            Object {
              "color": "#000",
            }
          }
        >
          Kakao
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.2}
        testID="btn-sign-up"
      >
        <Text
          style={
            Object {
              "color": "#ACACAC",
            }
          }
        >
          회원이 아니신가요? 회원가입
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`[LoginBtns:signup] rendering test should render without crashing 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
          },
        ]
      }
    >
      <TouchableOpacity
        activeOpacity={0.2}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#333333",
              "borderRadius": 3,
              "borderStyle": "solid",
              "borderWidth": 1,
              "height": 40,
              "justifyContent": "center",
              "width": "100%",
            },
            Object {
              "backgroundColor": "#62e384",
              "borderColor": "black",
              "borderStyle": "solid",
              "borderWidth": 0,
              "fontSize": 14,
              "fontWeight": "bold",
              "lineHeight": 16,
              "marginBottom": 10,
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 10,
              "textAlign": "center",
              "width": "62%",
            },
          ]
        }
        testID="btn-local-sign-in"
      >
        <Text
          style={
            Object {
              "color": "#FFF",
            }
          }
        >
          Email
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.2}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#333333",
              "borderRadius": 3,
              "borderStyle": "solid",
              "borderWidth": 1,
              "height": 40,
              "justifyContent": "center",
              "width": "100%",
            },
            Object {
              "backgroundColor": "#fff",
              "borderColor": "black",
              "borderStyle": "solid",
              "borderWidth": 0,
              "fontSize": 14,
              "fontWeight": "bold",
              "lineHeight": 16,
              "marginBottom": 10,
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 10,
              "textAlign": "center",
              "width": "62%",
            },
          ]
        }
        testID="btn-google-sign-in"
      >
        <Text>
          <Text
            style={
              Object {
                "color": "#4285F4",
              }
            }
          >
            G
          </Text>
          <Text
            style={
              Object {
                "color": "#EA4335",
              }
            }
          >
            o
          </Text>
          <Text
            style={
              Object {
                "color": "#FBBC05",
              }
            }
          >
            o
          </Text>
          <Text
            style={
              Object {
                "color": "#4285F4",
              }
            }
          >
            g
          </Text>
          <Text
            style={
              Object {
                "color": "#34A853",
              }
            }
          >
            l
          </Text>
          <Text
            style={
              Object {
                "color": "#EA4335",
              }
            }
          >
            e
          </Text>
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.2}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#333333",
              "borderRadius": 3,
              "borderStyle": "solid",
              "borderWidth": 1,
              "height": 40,
              "justifyContent": "center",
              "width": "100%",
            },
            Object {
              "backgroundColor": "#3b5998",
              "borderColor": "black",
              "borderStyle": "solid",
              "borderWidth": 0,
              "fontSize": 14,
              "fontWeight": "bold",
              "lineHeight": 16,
              "marginBottom": 10,
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 10,
              "textAlign": "center",
              "width": "62%",
            },
          ]
        }
        testID="btn-facebook-sign-in"
      >
        <Text
          style={
            Object {
              "color": "#FFF",
            }
          }
        >
          facebook
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.2}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#333333",
              "borderRadius": 3,
              "borderStyle": "solid",
              "borderWidth": 1,
              "height": 40,
              "justifyContent": "center",
              "width": "100%",
            },
            Object {
              "backgroundColor": "#ffe812",
              "borderColor": "black",
              "borderStyle": "solid",
              "borderWidth": 0,
              "fontSize": 14,
              "fontWeight": "bold",
              "lineHeight": 16,
              "marginBottom": 10,
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 10,
              "textAlign": "center",
              "width": "62%",
            },
          ]
        }
        testID="btn-kakao-sign-in"
      >
        <Text
          style={
            Object {
              "color": "#000",
            }
          }
        >
          Kakao
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.2}
        testID="btn-sign-up"
      >
        <Text
          style={
            Object {
              "color": "#ACACAC",
            }
          }
        >
          회원이 아니신가요? 회원가입
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      Object {
        "bottom": 0,
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "bottom": "100%",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "paddingBottom": 4,
          "paddingEnd": 4,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <TouchableWithoutFeedback
        hitSlop={
          Object {
            "bottom": 4,
            "left": 4,
            "right": 4,
            "top": 4,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(250, 186, 48, 0.95)",
              },
              Object {
                "borderRadius": 14,
                "height": 28,
                "justifyContent": "center",
                "paddingHorizontal": 12,
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "rgba(255, 255, 255, 1)",
                "fontSize": 12,
                "includeFontPadding": false,
                "lineHeight": 16,
              }
            }
          >
            Dismiss All
          </Text>
        </View>
      </TouchableWithoutFeedback>
    </View>
    <ScrollView
      data={
        Array [
          Object {
            "category": "Warning: AsyncStorage has been extracted from react-native core and will be removed in a future release. It can now be installed and imported from '@react-native-community/async-storage' instead of 'react-native'. See https://github.com/react-native-community/react-native-async-storage",
            "warnings": Array [
              YellowBoxWarning {
                "message": Object {
                  "content": "Warning: AsyncStorage has been extracted from react-native core and will be removed in a future release. It can now be installed and imported from '@react-native-community/async-storage' instead of 'react-native'. See https://github.com/react-native-community/react-native-async-storage",
                  "substitutions": Array [],
                },
                "stack": Array [
                  Object {
                    "arguments": Array [],
                    "column": 13,
                    "file": "C:\\\\Users\\\\moidp\\\\CloudStation\\\\sangwook\\\\Programing\\\\project\\\\ThreeDays\\\\node_modules\\\\fbjs\\\\lib\\\\warning.js",
                    "lineNumber": 30,
                    "methodName": "printWarning",
                  },
                  Object {
                    "arguments": Array [],
                    "column": 18,
                    "file": "C:\\\\Users\\\\moidp\\\\CloudStation\\\\sangwook\\\\Programing\\\\project\\\\ThreeDays\\\\node_modules\\\\fbjs\\\\lib\\\\warning.js",
                    "lineNumber": 51,
                    "methodName": "Object.<anonymous>.warning",
                  },
                  Object {
                    "arguments": Array [],
                    "column": 3,
                    "file": "C:\\\\Users\\\\moidp\\\\CloudStation\\\\sangwook\\\\Programing\\\\project\\\\ThreeDays\\\\node_modules\\\\react-native\\\\Libraries\\\\Utilities\\\\warnOnce.js",
                    "lineNumber": 29,
                    "methodName": "warning",
                  },
                  Object {
                    "arguments": Array [],
                    "column": 5,
                    "file": "C:\\\\Users\\\\moidp\\\\CloudStation\\\\sangwook\\\\Programing\\\\project\\\\ThreeDays\\\\node_modules\\\\react-native\\\\Libraries\\\\react-native\\\\react-native-implementation.js",
                    "lineNumber": 175,
                    "methodName": "Object.warnOnce [as AsyncStorage]",
                  },
                  Object {
                    "arguments": Array [],
                    "column": 18,
                    "file": "C:\\\\Users\\\\moidp\\\\CloudStation\\\\sangwook\\\\Programing\\\\project\\\\ThreeDays\\\\src\\\\Context\\\\User\\\\User.tsx",
                    "lineNumber": 1387,
                    "methodName": "getUserInfo",
                  },
                ],
                "symbolicated": Object {
                  "error": null,
                  "stack": null,
                  "status": "NONE",
                },
              },
            ],
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      scrollEnabled={false}
      scrollEventThrottle={50}
      scrollsToTop={false}
      stickyHeaderIndices={Array []}
      style={
        Object {
          "height": 48.5,
        }
      }
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View
        style={null}
      >
        <TouchableWithoutFeedback>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "rgba(250, 186, 48, 0.95)",
                },
                Object {
                  "height": 48,
                  "justifyContent": "center",
                  "marginTop": 0.5,
                  "paddingHorizontal": 12,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                }
              }
            >
              <Text
                numberOfLines={2}
                style={
                  Object {
                    "color": "rgba(255, 255, 255, 1)",
                    "flex": 1,
                    "fontSize": 14,
                    "includeFontPadding": false,
                    "lineHeight": 18,
                  }
                }
              >
                <Text>
                  Warning: AsyncStorage has been extracted from react-native core and will be removed in a future release. It can now be installed and imported from '@react-native-community/async-storage' instead of 'react-native'. See https://github.com/react-native-community/react-native-async-storage
                </Text>
              </Text>
            </View>
          </View>
        </TouchableWithoutFeedback>
      </View>
    </ScrollView>
    <SafeAreaView
      style={
        Object {
          "backgroundColor": "rgba(250, 186, 48, 0.95)",
          "marginTop": 0.5,
        }
      }
    />
  </View>
</View>
`;
